--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
+    "datatables.net-dt": "^2.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
