--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "ejs": "^3.1.10",
     "electron-squirrel-startup": "^1.0.1",
-    "lowdb": "^6.1.1"
+    "lowdb": "^6.1.1",
+    "puppeteer": "^24.28.0"
   }
 }
