--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
+    "@tinymce/tinymce-react": "^6.3.0",
     "datatables.net-dt": "^2.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-modal": "^3.16.3",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "tinymce": "^8.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
