--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,10 +3,10 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*.*.*'  # Triggers on version tags like v1.0.0
+      - 'v*.*.*'
 
 jobs:
-  build:
+  release:
     runs-on: ${{ matrix.os }}
     
     strategy:
@@ -34,32 +34,7 @@ jobs:
       - name: Build frontend
         run: npm run build
       
-      - name: Build Electron app
+      - name: Publish to GitHub Releases
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run publish
-  
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Create Release Notes
-        id: release_notes
-        run: |
-          echo "## What's New" > release_notes.md
-          echo "" >> release_notes.md
-          echo "Release ${{ github.ref_name }}" >> release_notes.md
-      
-      - name: Update Release
-        uses: softprops/action-gh-release@v1
-        with:
-          draft: false
-          prerelease: false
-          body_path: release_notes.md
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
