fix: use electron-forge publish directly in CI

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Publish to GitHub Releases
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run publish
+        run: npx electron-forge publish
