--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -46,5 +46,5 @@ jobs:
       
       - name: Publish to GitHub Releases
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         run: npx electron-forge publish
