--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "ecclesia-desktop",
-  "version": "1.0.3",
-  "description": "Church Management System",
-  "main": "main.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sujithrex/Ecclesia-desktop.git"
-  },
-  "scripts": {
-    "dev": "concurrently \"npm run dev:frontend\" \"cross-env NODE_ENV=development electron-forge start\"",
-    "dev:frontend": "cd frontend && npm run dev",
-    "build": "cd frontend && npm run build",
-    "start": "electron-forge start",
-    "package": "npm run build && electron-forge package",
-    "make": "npm run build && electron-forge make",
-    "publish": "npm run build && dotenv -e .env electron-forge publish"
-  },
-  "keywords": [
-    "church",
-    "management",
-    "csi",
-    "tirunelveli"
-  ],
-  "author": "Mr. Sujith & Mrs. Remina Sujith",
-  "license": "ISC",
-  "devDependencies": {
-    "@electron-forge/cli": "^7.10.2",
-    "@electron-forge/maker-deb": "^7.10.2",
-    "@electron-forge/maker-rpm": "^7.10.2",
-    "@electron-forge/maker-squirrel": "^7.10.2",
-    "@electron-forge/maker-zip": "^7.10.2",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
-    "@electron-forge/plugin-fuses": "^7.10.2",
-    "@electron-forge/publisher-github": "^7.10.2",
-    "@electron/fuses": "^1.8.0",
-    "concurrently": "^9.2.1",
-    "cross-env": "^10.1.0",
-    "dotenv-cli": "^11.0.0",
-    "electron": "^39.0.0"
-  },
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "ejs": "^3.1.10",
-    "electron-squirrel-startup": "^1.0.1",
-    "electron-updater": "^6.6.2",
-    "lowdb": "^6.1.1",
-    "puppeteer": "^24.28.0"
-  }
+    "name":  "ecclesia-desktop",
+    "version":  "1.0.4",
+    "description":  "Church Management System",
+    "main":  "main.js",
+    "repository":  {
+                       "type":  "git",
+                       "url":  "https://github.com/sujithrex/Ecclesia-desktop.git"
+                   },
+    "scripts":  {
+                    "dev":  "concurrently \"npm run dev:frontend\" \"cross-env NODE_ENV=development electron-forge start\"",
+                    "dev:frontend":  "cd frontend \u0026\u0026 npm run dev",
+                    "build":  "cd frontend \u0026\u0026 npm run build",
+                    "start":  "electron-forge start",
+                    "package":  "npm run build \u0026\u0026 electron-forge package",
+                    "make":  "npm run build \u0026\u0026 electron-forge make",
+                    "publish":  "npm run build \u0026\u0026 dotenv -e .env electron-forge publish"
+                },
+    "keywords":  [
+                     "church",
+                     "management",
+                     "csi",
+                     "tirunelveli"
+                 ],
+    "author":  "Mr. Sujith \u0026 Mrs. Remina Sujith",
+    "license":  "ISC",
+    "devDependencies":  {
+                            "@electron-forge/cli":  "^7.10.2",
+                            "@electron-forge/maker-deb":  "^7.10.2",
+                            "@electron-forge/maker-rpm":  "^7.10.2",
+                            "@electron-forge/maker-squirrel":  "^7.10.2",
+                            "@electron-forge/maker-zip":  "^7.10.2",
+                            "@electron-forge/plugin-auto-unpack-natives":  "^7.10.2",
+                            "@electron-forge/plugin-fuses":  "^7.10.2",
+                            "@electron-forge/publisher-github":  "^7.10.2",
+                            "@electron/fuses":  "^1.8.0",
+                            "concurrently":  "^9.2.1",
+                            "cross-env":  "^10.1.0",
+                            "dotenv-cli":  "^11.0.0",
+                            "electron":  "^39.0.0"
+                        },
+    "dependencies":  {
+                         "bcryptjs":  "^3.0.3",
+                         "ejs":  "^3.1.10",
+                         "electron-squirrel-startup":  "^1.0.1",
+                         "electron-updater":  "^6.6.2",
+                         "lowdb":  "^6.1.1",
+                         "puppeteer":  "^24.28.0"
+                     }
 }
