--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@phosphor-icons/react": "^2.1.10",
     "@tinymce/tinymce-react": "^6.3.0",
     "datatables.net-dt": "^2.3.4",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
